# bimmerstein-tuning-suite

./: .gitattributes  .gitignore  BUILDING.md  BUILD_ENVIRONMENT-Nuitka.txt  BUILD_ENVIRONMENT.txt  MANIFEST.in  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  pyproject.toml
DEPENDENCY_LICENSES/: INDEX.txt
DEPENDENCY_LICENSES/PySide6_Addons-6.11.1/: GPL-2.0-selected.txt
DEPENDENCY_LICENSES/ordered-set-4.1.0/: MIT-LICENSE.txt
DEPENDENCY_LICENSES/pyserial-3.5/: BSD-3-Clause.txt
ecueditor/: __init__.py  __main__.py  app.py  metadata.py  runtime_paths.py
ecueditor/core/: cli.py  errors.py  settings.py
ecueditor/core/checksum/: base.py
ecueditor/core/comms/: __init__.py  connection.py
ecueditor/core/defs/: inheritance.py  library.py  model.py  parser.py
ecueditor/core/dyno/: __init__.py  et.py  offline.py  physics.py  profile.py  run.py  units.py
ecueditor/core/logger/: __init__.py  engine.py  playback.py  recorder.py  session.py  telegram.py
ecueditor/core/loggerdef/: __init__.py  channel.py  parser.py
ecueditor/core/maf_scaling/: __init__.py  catalog.py  destination.py  diagnostics.py  grids.py  models.py  resampling.py  scaling.py  units.py
ecueditor/core/mapstudio/: __init__.py  adapter.py  features.py  history.py  interpolation.py  model.py  smoothing.py
ecueditor/core/memory/: __init__.py  base.py  direct.py  linear_offset.py  ms41_fullread.py
ecueditor/core/plugins/: registry.py
ecueditor/core/rom/: cell.py  compare.py  image.py  storage.py  table.py
ecueditor/core/scaling/: expression.py  scale.py
ecueditor/ui/: app.py  main_window.py  theme.py
ecueditor/ui/design/: __init__.py  colormaps.py  fonts.py  icons.py  qss.py  theme_manager.py  tokens.py
ecueditor/ui/dialogs/: definition_manager.py  force_load_dialog.py  rom_properties.py  settings_dialog.py
ecueditor/ui/dyno/: __init__.py  tab.py
ecueditor/ui/editor/: clipboard.py  compare_images_dialog.py  edit_ops.py  inspector.py  rom_tree.py  save_controller.py  surface3d.py  table_chooser.py  table_frame.py  table_grid.py  table_menubar.py  table_model.py  table_toolbar.py
ecueditor/ui/logger/: __init__.py  controller.py  dashboard_tab.py  data_tab.py  graph_tab.py  log_controls.py  overlay.py  profile.py  selection_panel.py  switch_trigger.py  window.py
ecueditor/ui/maf_scaling/: __init__.py  document.py  manager.py
manual/: USER_MANUAL.md
packaging/: build_user_manual.py  ecueditor.iss  ecueditor.spec  nuitka_entry.py
plugins/: afr_target_tab.py
scripts/: build_app_icon.py  build_nuitka_release.py  build_release.py  check.py  collect_dependency_licenses.py
(+44 files in other folders)
